<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/detailedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/product"
            android:textColor="@color/big_stone" />

        <EditText
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_product_name"
            android:inputType="textWebEditText"
            app:layout_constraintTop_toBottomOf="@+id/code" />

        <TextView
            android:id="@+id/codeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/code"
            android:textColor="@color/big_stone" />

        <EditText
            android:id="@+id/prodCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_product_code"
            android:inputType="textShortMessage"
            app:layout_constraintTop_toBottomOf="@+id/code" />

        <TextView
            android:id="@+id/priceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/price"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/stockNumber" />

        <EditText
            android:id="@+id/prodPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_price"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/stockTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="Stock Level"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/codeNumber" />

        <EditText
            android:id="@+id/stockLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter number of products produced"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/stock" />
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedView">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>