<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/dialog_bg">

    <LinearLayout
        android:id="@+id/detailedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/strawberry_cheesecake"
            android:textColor="@color/big_stone"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/anzac" />

        <TextView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/code"
            android:textColor="@color/big_stone" />

        <EditText
            android:id="@+id/codeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintTop_toBottomOf="@+id/code" />

        <TextView
            android:id="@+id/stockLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="Added Stocks"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/codeNumber" />

        <EditText
            android:id="@+id/stockNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/stockLevel" />

        <TextView
            android:id="@+id/soldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="Added Sold Items"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/stockNumber" />

        <EditText
            android:id="@+id/soldNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/soldTitle" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/price"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/stockNumber" />

        <EditText
            android:id="@+id/priceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/viewIngredientList"
            android:ems="10"
            android:text="View component list"
            android:gravity="center"
            android:textColor="@color/big_stone"
            android:fontFamily="@font/prompt"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailedView">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>