<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/detailedView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/materialName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="Strawberry"
            android:textColor="@color/big_stone"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/anzac" />

        <TextView
            android:id="@+id/matCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/code"
            android:textColor="@color/big_stone" />

        <EditText
            android:id="@+id/matCodeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            app:layout_constraintTop_toBottomOf="@+id/code" />

        <TextView
            android:id="@+id/stockTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="Added Stock Level"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/codeNumber" />

        <EditText
            android:id="@+id/stockNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/stock" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="@string/price"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/stockNumber" />

        <EditText
            android:id="@+id/materialPriceNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/thresholdTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/prompt_bold"
            android:text="Threshold Level"
            android:textColor="@color/big_stone"
            app:layout_constraintTop_toBottomOf="@+id/codeNumber" />

        <EditText
            android:id="@+id/thresholdLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintTop_toBottomOf="@+id/stock" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/detailedView"
        tools:layout_editor_absoluteX="9dp">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>